--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@ body {
 .flex-box {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     gap: 30px;
 }
 
@@ -91,13 +91,14 @@ body {
 
 .hero-content-holder {
     background: var(--bannerBackground);
-    border-radius: 30px;
-    padding: 50px 30px;
+    border-radius: 20px;
+    padding: 0 30px;
     overflow-y: hidden;
 }
 
 .hero-sectoin-left {
     max-width: 50%;
+    padding: 50px 0;
 }
 
 .hero-heading {
@@ -114,9 +115,7 @@ body {
 }
 
 .hero-sectoin-rigth img {
-    display: block;
-    position: relative;
-    bottom: -60px;
+    margin-bottom: -8px;
 }
 
 
