--- a/styles/upcomming.css
+++ b/styles/upcomming.css
@@ -9,6 +9,11 @@
     align-items: center;
     min-height: 260px;
     box-shadow: 10px 10px 24px #eaebef, -10px -10px 24px #ffffff;
+    transition: 0.4s;
+}
+
+.match-card:hover {
+    border-bottom: 4px solid #692ff1;
 }
 
 .flags {
