--- a/styles/base.css
+++ b/styles/base.css
@@ -184,6 +184,10 @@ body {
 /* blog card  */
 
 .blog-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 15px;
     background: var(--blog-card-background);
     border: 1px solid #b2b3b5;
     border-radius: 6px;
@@ -230,13 +234,16 @@ body {
 
 .article-stat {
     display: flex;
-    justify-content: start;
+    justify-content: center;
     gap: 15px;
     align-items: center;
+    padding: 10px 0;
+    border: 1px solid #ebeeff;
+    border-radius: 4px;
 }
 
 .article-stat i {
-    color: #7e7e7e;
+    color: #8490fb;
     margin-right: 10px;
 }
 
