--- a/styles/group.css
+++ b/styles/group.css
@@ -1,16 +1,23 @@
 .group-card {
-    padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     background-color: #fff;
     border-radius: 5px;
     border: 1px solid #e7ebf4;
     min-height: 250px;
-    box-shadow: 10px 10px 24px #eaebef, -10px -10px 24px #ffffff;
+    box-shadow: 10px 10px 60px #eaebef, -10px -10px 24px #ffffff;
     transition: 0.2s;
+}
+
+.card-grid-container {
+    gap: 30px;
+}
+
+.group-card ul {
+    padding: 10px;
 }
 
 .hero-content-holder {
@@ -30,7 +37,12 @@
 }
 
 .group-name {
-    color: #692ff1;
+    text-align: center;
+    padding: 8px 0;
+    width: 100%;
+    color: #faf8ff;
+    background-color: #692ff1;
+    border-radius: 5px 5px 0 0;
 }
 
 .group-card ul li::before {
